# Securities-Trading-Simulation-Matching-System

./: readme.txt
TransClientUi/: TransClientUi.pro  main.cpp  mymessage.cpp  mymessage.h  mymessage.ui  network.cpp  network.h  network.ui  pubwidget.ui  resultshow.ui  revwidget.cpp  revwidget.h  revwidget.ui  subwidget.cpp  subwidget.h  subwidget.ui  tradewidget.cpp  tradewidget.h  tradewidget.ui  widget.cpp  widget.h  widget.ui
TransServer/: CMakeLists.txt  main.cpp
TransServer/buffer/: buffer.cpp
TransServer/http/: connection.cpp  connection.h  request.cpp  request.h  response.cpp  response.h
TransServer/pool/: sqlconnpool.cpp  sqlconnpool.h  threadpool.h
TransServer/server/: TransServer.cpp  TransServer.h  epoller.cpp  epoller.h
